2005-03-07  Alexander Malysh <amalysh at kannel.org>
    * gw/dlr_pgsql.c: attached patch adds again 'LIMIT 1' to dlr_pgsql
      because after fix for #190 we will delete and update to much rows
      in postgresql.
      [Msg-Id: <cv04cu$dv3$1@sea.gmane.org>]

2005-03-07  Alexander Malysh <amalysh at kannel.org>
    * gw/wap-appl.c: added call to 'radius_acct_get_msisdn' back.
      Thanks to Jonathan for reporting this.

2005-03-07 Aarno Syvanen <as@gni.ch>
    * doc/userguide/userguide.xml:File schemes in settings and bookmark
      examples were wrong. Fixed this. Thanks to Davy for reporting.

2005-03-06  Alexander Malysh <amalysh at kannel.org>
    * gw/bb_store.c, gw/wap-appl.c: fixed compiler warnings.

2005-03-06  Alexander Malysh <amalysh at kannel.org>
    * gw/wap-appl.c: Fix empty device_headers with request_headers == NULL
      and session_headers != NULL and small memory leak with connection-oriented wap
      Thanks to "Paul P Komkoff Jr <i at stingr.net>" for the patch.
      [Msg-Id: <20050306212423.GA26532@stingr.stingr.net>]

2005-03-04  Stipe Tolj  <stolj@wapme.de> 
    * gw/wap-appl.c: adding a NULL check causing a PANIC while dumping the
      IP in the fetch info() statement. How can this be NULL, since we 
      pass it the same way to alog()?. Tbanks again to Jonathan for this.

2005-03-04  Stipe Tolj  <stolj@wapme.de> 
    * gwlib/http.c: fixing bug #205 (leaking FDs). Due to an unhandled error
      state we would not change the HTTPEntity state and the conn ist not
      closed. Thanks to Jonathan for reporting this and Alex for the fix.

2005-03-04  Stipe Tolj  <stolj@wapme.de> 
    * gw/wap-appl.c: added <ip:port> output in info() log line for fetching
      the requested client URL. Thanks to Jonathan for this.
      [Msg-ID: <422880B3.90805@wirelessonenet.com>]

2005-03-02  Stipe Tolj  <stolj@wapme.de> 
    * doc/userguide/userguide.xml: fixed some typos and added sections for